--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         applicationId "com.example.android.sunshine.app"
         minSdkVersion 10
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -21,9 +21,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "2g"
+    }
+
     buildTypes.each {
         //it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"ADD_KEY_HERE"'
-        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"a40d70ae24c9efa7ccfff284da103b98"'
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"YOUR_KEY_HERE"'
     }
 }
 
