--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -7,16 +7,24 @@
     <!-- Required to act as a custom watch face. -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name" android:supportsRtl="true"
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
-        <service android:name=".SunshineWatchFace" android:label="@string/app_name"
+        <service
+            android:name=".SunshineWatchFace"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_WALLPAPER">
-            <meta-data android:name="android.service.wallpaper"
+            <meta-data
+                android:name="android.service.wallpaper"
                 android:resource="@xml/watch_face" />
-            <meta-data android:name="com.google.android.wearable.watchface.preview"
+            <meta-data
+                android:name="com.google.android.wearable.watchface.preview"
                 android:resource="@drawable/preview" />
-            <meta-data android:name="com.google.android.wearable.watchface.preview_circular"
+            <meta-data
+                android:name="com.google.android.wearable.watchface.preview_circular"
                 android:resource="@drawable/preview" />
 
             <intent-filter>
@@ -26,16 +34,21 @@
             </intent-filter>
         </service>
 
-        <service android:name=".service.ConfigDataListenerService" >
+        <service android:name=".service.ConfigDataListenerService">
             <intent-filter>
                 <!--<action android:name="com.google.android.gms.wearable.BIND_LISTENER" />-->
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/prefix" />
+
+                <data
+                    android:host="*"
+                    android:pathPrefix="/prefix"
+                    android:scheme="wear" />
             </intent-filter>
         </service>
 
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
     </application>
 
